conteúdo não aleatório

--- a/pagina01.html
+++ b/pagina01.html
@@ -33,14 +33,7 @@
 
     <div class="persona" id="mario">
         <h1>SUPER MÁRIO BROS</h1>
-        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga commodi suscipit natus non repudiandae
-            reprehenderit adipisci impedit iste consequuntur, nihil unde ad, nobis explicabo delectus, et sequi magnam
-            dolores. Eaque dignissimos placeat dolorem corrupti nostrum impedit autem aspernatur debitis odio quia
-            fugiat perferendis ad maxime, dolor delectus laudantium eius repellat suscipit. Cupiditate eius animi
-            molestiae nemo laborum eligendi tempora perferendis rem vel sit incidunt, quasi minima nulla sapiente odio
-            nisi delectus, explicabo praesentium rerum voluptate mollitia dicta quo tenetur? Sed consequatur neque
-            beatae tenetur dolores nam explicabo, quod eveniet a et, assumenda ut, saepe velit repellendus quis harum
-            doloribus fugit.</P>
+        <P>Ícone da Nintendo, Mario marcou a história dos games em sua famosa série. Em 1980, após uma tentativa sem sucesso da Nintendo ao fazer um jogo baseado no desenho Popeye, Miyamoto, considerado o pai do Mario, foi então solicitado pela empresa para projetar um novo jogo baseado em suas próprias ideias.</P>
             <img src="mario_2.jpg" alt="">
             <a href="#principal">VOLTAR</a>
     </div>
@@ -48,73 +41,35 @@
 
     <div class="persona" id="peach">
         <h1>PRINCESA PEACH</h1>
-        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga commodi suscipit natus non repudiandae
-            reprehenderit adipisci impedit iste consequuntur, nihil unde ad, nobis explicabo delectus, et sequi magnam
-            dolores. Eaque dignissimos placeat dolorem corrupti nostrum impedit autem aspernatur debitis odio quia
-            fugiat perferendis ad maxime, dolor delectus laudantium eius repellat suscipit. Cupiditate eius animi
-            molestiae nemo laborum eligendi tempora perferendis rem vel sit incidunt, quasi minima nulla sapiente odio
-            nisi delectus, explicabo praesentium rerum voluptate mollitia dicta quo tenetur? Sed consequatur neque
-            beatae tenetur dolores nam explicabo, quod eveniet a et, assumenda ut, saepe velit repellendus quis harum
-            doloribus fugit.</P>
+        <P>A Princesa Peach Cogumelo é uma personagem fictícia da série de videogames Super Mario Bros., produzido pela Nintendo. Ela é a princesa do também fictício Reino dos Cogumelos e por diversas vezes faz o papel de donzela em apuros da série, sendo constantemente salva por Mario, a quem ela é apaixonada.</P>
             <img src="peach_2.jpg" alt="">
         <a href="#principal">VOLTAR</a>
     </div>
 
     <div class="persona" id="browser">
         <h1>BROWSER</h1>
-        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga commodi suscipit natus non repudiandae
-            reprehenderit adipisci impedit iste consequuntur, nihil unde ad, nobis explicabo delectus, et sequi magnam
-            dolores. Eaque dignissimos placeat dolorem corrupti nostrum impedit autem aspernatur debitis odio quia
-            fugiat perferendis ad maxime, dolor delectus laudantium eius repellat suscipit. Cupiditate eius animi
-            molestiae nemo laborum eligendi tempora perferendis rem vel sit incidunt, quasi minima nulla sapiente odio
-            nisi delectus, explicabo praesentium rerum voluptate mollitia dicta quo tenetur? Sed consequatur neque
-            beatae tenetur dolores nam explicabo, quod eveniet a et, assumenda ut, saepe velit repellendus quis harum
-            doloribus fugit.</P>
+        <P>O Rei Bowser Koopa, conhecido no Japão como Koopa, ou somente Bowser, é o principal vilão do universo Mario, consagrada franquia da Nintendo, e também um dos mais famosos vilões da empresa.</P>
             <img src="browser_2.jpg" alt="">
         <a href="#principal">VOLTAR</a>
     </div>
 
     <div class="persona" id="toad">
         <h1>TOAD</h1>
-        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga commodi suscipit natus non repudiandae
-            reprehenderit adipisci impedit iste consequuntur, nihil unde ad, nobis explicabo delectus, et sequi magnam
-            dolores. Eaque dignissimos placeat dolorem corrupti nostrum impedit autem aspernatur debitis odio quia
-            fugiat perferendis ad maxime, dolor delectus laudantium eius repellat suscipit. Cupiditate eius animi
-            molestiae nemo laborum eligendi tempora perferendis rem vel sit incidunt, quasi minima nulla sapiente odio
-            nisi delectus, explicabo praesentium rerum voluptate mollitia dicta quo tenetur? Sed consequatur neque
-            beatae tenetur dolores nam explicabo, quod eveniet a et, assumenda ut, saepe velit repellendus quis harum
-            doloribus fugit.</P>
+        <P>Toad é uma personagem presente nas séries do Super Mario. Toad faz a sua aparência em muitos jogos do Mario, como personagem jogável e não jogável , por exemplo no Super Mario 3d World, Toad é uma personagem jogável e já está desbloqueada. Toad tem uma irmã Toadette de acordo com o guia de Mario Kart: Double Dash!!. Ele também aparece em Super Mario 64 , mas como uma personagem não jogável. Toad é um ajudante da Princesa Peach.</P>
             <img src="toad_2.jpg" alt="">
         <a href="#principal">VOLTAR</a>
     </div>
 
     <div class="persona" id="luigi">
         <h1>LUIGI</h1>
-        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga commodi suscipit natus non repudiandae
-            reprehenderit adipisci impedit iste consequuntur, nihil unde ad, nobis explicabo delectus, et sequi magnam
-            dolores. Eaque dignissimos placeat dolorem corrupti nostrum impedit autem aspernatur debitis odio quia
-            fugiat perferendis ad maxime, dolor delectus laudantium eius repellat suscipit. Cupiditate eius animi
-            molestiae nemo laborum eligendi tempora perferendis rem vel sit incidunt, quasi minima nulla sapiente odio
-            nisi delectus, explicabo praesentium rerum voluptate mollitia dicta quo tenetur? Sed consequatur neque
-            beatae tenetur dolores nam explicabo, quod eveniet a et, assumenda ut, saepe velit repellendus quis harum
-            doloribus fugit.</P>
+        <P>Luigi é um personagem fictício de videogames produzido pela Nintendo. Criado pelo designer de jogos Shigeru Miyamoto, Luigi é irmão do Mario e é um dos mascotes da série, ele é o seu companheiro em vários jogos.</P>
             <img src="luigi_2.jpg" alt="">
         <a href="#principal">VOLTAR</a>
     </div>
 
     <div class="persona" id="donkey">
         <h1>DONKEY KONG</h1>
-        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga commodi suscipit natus non repudiandae
-            reprehenderit adipisci impedit iste consequuntur, nihil unde ad, nobis explicabo delectus, et sequi
-            magnam
-            dolores. Eaque dignissimos placeat dolorem corrupti nostrum impedit autem aspernatur debitis odio quia
-            fugiat perferendis ad maxime, dolor delectus laudantium eius repellat suscipit. Cupiditate eius animi
-            molestiae nemo laborum eligendi tempora perferendis rem vel sit incidunt, quasi minima nulla sapiente
-            odio
-            nisi delectus, explicabo praesentium rerum voluptate mollitia dicta quo tenetur? Sed consequatur neque
-            beatae tenetur dolores nam explicabo, quod eveniet a et, assumenda ut, saepe velit repellendus quis
-            harum
-            doloribus fugit.</P>
+        <P>Traduzido do inglês-Donkey Kong, também abreviado para DK, é um gorila fictício da série de videogames Donkey Kong e Mario, criada por Shigeru Miyamoto. O Donkey Kong original apareceu pela primeira vez como o personagem-título e antagonista do jogo homônimo de 1981, um jogo de plataforma da Nintendo, que levaria à série Donkey Kong.</P>
             <img src="donkey_2.jpg" alt="">
         <a href="#principal">VOLTAR</a>
     </div>
